@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 7;
+use Test::More tests => 8;
 use Test::Builder::Tester;
 
 use Test::WWW::Mechanize ();
@@ -39,6 +39,20 @@ GOOD_PUT: {
     test_test('PUTs existing URI and reports success - default desc');
 }
 
+
+UNDEF_URL: {
+    my $mech = Test::WWW::Mechanize->new();
+    test_out( 'not ok 1 - Passing undef for a URL' );
+    test_fail( +2 );
+    test_diag( 'URL cannot be undef.' );
+    my $ok = $mech->put_ok( undef, 'Passing undef for a URL' );
+    test_test( 'Undef URLs' );
+}
+
+
 $server->stop;
 
 done_testing();
+
+
+exit 0;
