@@ -11,6 +11,10 @@ NEXT
 Added default test messages for button_exists_ok and lacks_button_ok
 methods.  Thanks, Daniel Böhmer (GH#70)
 
+get_ok(), post_ok(), head_ok(), put_ok() and delete_ok() now all fail
+if an undef URL is passed, rather than passing the undef URL into the
+underlying LWP functions. Thanks, Jess Robinson. (GH #40)
+
 [FIXES]
 Disable proxies in some of the tests that look at a local test server.
 (GH#55, GH#74)
